# bottlerocket-sdk

./: .dockerignore  .gitignore  BUILDING.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Makefile  README.md  publish-sdk  sdk-fetch
.github/workflows/: test-license-scan.yml
configs/aws-kms-pkcs11/: aws-kms-pkcs11.module
configs/aws-lc/: aarch64-bottlerocket-linux-gnu.toolchain.cmake  x86_64-bottlerocket-linux-gnu.toolchain.cmake
configs/buildroot/: sdk_aarch64_gnu_defconfig  sdk_aarch64_musl_defconfig  sdk_x86_64_gnu_defconfig  sdk_x86_64_musl_defconfig
configs/ca-certificates/: attribution.txt
configs/cargo-deny/: clarify.toml  deny.toml
configs/cargo-make/: clarify.toml  deny.toml
configs/docker/: docker-cli.json
configs/gnupg/: gnupg-pkcs11-scd.conf
configs/rust/: config-aarch64.toml  config-aarch64.toml.in  config-x86_64.toml  config-x86_64.toml.in  config.toml.in
hashes/: aws-kms-pkcs11  aws-lc  aws-sdk-cpp  awscli  buildroot  ca-certificates  cargo-deny  cargo-make  docker  e2fsprogs  glibc  go  go-1.21  go-1.22  go-1.23  govmomi  grub  kernel  libunwind  license-scan  lz4  musl  openssl  oras  rust
helpers/aws-lc/: LICENSE  build-aws-lc.sh  parse-functions.go  umod-amd64.s  umod-arm64.c
helpers/buildroot/: build-gnu-toolchain.sh  build-musl-toolchain.sh
helpers/glibc/: build-glibc.sh
license-scan/: Cargo.toml  Makefile  clarify.toml  deny.toml
license-scan/src/: main.rs
license-scan/testdata/: clarifications_sample.toml
license-tool/: Cargo.toml  README.md  clarify.toml  deny.toml
license-tool/src/: main.rs
license-tool/tests/data/: test-packages-licenses.toml
macros/: aarch64  cargo  check-fips  rust  shared  x86_64
sbom-tool/: README.md  go.mod  go.sum  main.go
tools/: update-aws-lc.sh  update-cargo-deny.sh  update-go.sh  update-grub.sh  update-rust.sh
wrappers/go/: go  (+2 more)
(+25 files in other folders)
