[package]
name = "bottlerocket-license-scan"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
askalono = "0.4"
cargo_metadata = "0.14"
ignore = "0.4"
lazy_static = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
spdx = "0.3"
structopt = { version = "0.3", default-features = false }
toml = "0.5"
twox-hash = "1"
walkdir = "2"

[dev-dependencies]
maplit = "1"
